# remote-mcp

./: .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: auth.rs  capabilities.rs  config.rs  jobs.rs  lib.rs  main.rs  metrics.rs  sessions.rs
crates/agent/src/routes/: docker.rs  exec.rs  file.rs  fs.rs  git.rs  job.rs  logs.rs  metrics.rs  mod.rs  process.rs  service.rs  session.rs  sysinfo.rs  ui.rs
crates/agent/tests/: integration.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: audit.rs  auth.rs  db.rs  error.rs  heartbeat.rs  main.rs
crates/mcp-server/src/tools/: docker.rs  env.rs  exec.rs  file.rs  fleet.rs  fs.rs  git.rs  logs.rs  machine.rs  mod.rs  process.rs  service.rs  session.rs  sysinfo.rs  ui.rs
crates/mcp-server/src/transport/: agent.rs  mod.rs  ssh.rs
scripts/: build-dist.sh  install-agent.ps1  install-agent.sh
